Updating about page. Program no longer uses Newtonsoft.Json or Migradoc/PDFSharp. It now uses wkhtmltopdf to generate pdf files from html, and Ghostscript to print pdf files. Console.WriteLine doesn't work in .NET6 - Debugging.Trace works, but noticeably impacts performance. Disabling print button on the timing screen when not timing a distance based event.  We do not have printing set up for other event types currently. Removed the option to specify what times were printed.  We're assuming printing is done to give finish times and if you want more in-depth results upload to a website or run the web server. Added a database backup button to the program update checker. Adding Inno Setup executable to be able to create an installer from github. Adding Ghostscript and wkhtmltopdf executables for printing.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -90,7 +90,7 @@
                                 <Button Content="Create HTML" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="CreateHTML_Click" />
                             </StackPanel>
                             <StackPanel Grid.Column="1">
-                                <Button Content="Print" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="Print_Click"/>
+                                <Button Name="printButton" Content="Print" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="Print_Click" IsEnabled="False"/>
                                 <Button Content="Awards" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="Award_Click"/>
                                 <Button Content="Raw Data" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="RawReads_Click"/>
                                 <Button x:Name="DNFButton" Content="Add DNF" Width="100" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0" Click="AddDNF_Click"/>
