--- a/ChronoKeep/UI/MainPages/AboutPage.xaml
+++ b/ChronoKeep/UI/MainPages/AboutPage.xaml
@@ -19,12 +19,12 @@
             <Label x:Name="SQLiteLabel" Content="SQLite" FontSize="16px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" />
             <Label x:Name="SQLiteURLLabel" Content="https://system.data.sqlite.org/" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0" />
             <Label x:Name="SQLiteLicenseLabel" Content="System.Data.SQLite is in the public domain." FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0" />
-            <Label x:Name="JSONLabel" Content="Json.NET" FontSize="16px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"/>
-            <Label x:Name="JSONURLLabel" Content="https://github.com/JamesNK/Newtonsoft.Json" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0"/>
-            <Label x:Name="JSONLicenseLabel" Content="License : https://opensource.org/licenses/MIT" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0"/>
-            <Label Content="MigraDoc &amp; PDFSharp" FontSize="16px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"/>
-            <Label Content="http://www.pdfsharp.net/MainPage.ashx" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0"/>
-            <Label Content="License information : http://www.pdfsharp.net/Licensing.ashx" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0"/>
+            <Label Content="wkhtmltopdf" FontSize="16px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"/>
+            <Label Content="https://wkhtmltopdf.org/" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0"/>
+            <Label Content="License : https://opensource.org/licenses/LGPL-3.0" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0"/>
+            <Label Content="Ghostscript" FontSize="16px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"/>
+            <Label Content="https://www.ghostscript.com/" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0"/>
+            <Label Content="License information : https://www.gnu.org/licenses/agpl-3.0.html" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0"/>
             <Label Content="Extended WPF Toolkit" FontSize="16px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"/>
             <Label Content="https://github.com/xceedsoftware/wpftoolkit" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0"/>
             <Label Content="License : https://opensource.org/licenses/MS-PL" FontSize="14px" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-7,0,0"/>
