--- a/ChronoKeep/Updates/DownloadWindow.xaml
+++ b/ChronoKeep/Updates/DownloadWindow.xaml
@@ -5,10 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.Updates"
         mc:Ignorable="d"
-        Title="Chronokeep Update" Height="150" Width="400" ResizeMode="NoResize" Closing="Window_Closing">
+        Title="Chronokeep Update" Height="200" Width="400" ResizeMode="NoResize" Closing="Window_Closing">
     <StackPanel VerticalAlignment="Center">
-        <Label Name="DownloadLabel" Content="Update Available" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <ProgressBar Name="DownloadProgress" Height="20" Margin="10,0,10,0" />
+        <StackPanel Name="UpdatePanel">
+            <Label Name="DownloadLabel" Content="Update Available" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <ProgressBar Name="DownloadProgress" Height="20" Margin="10,0,10,0" />
+        </StackPanel>
+        <Button x:Name="BackupDatabaseButton" Content="Backup Database" Height="30" Width="170" Visibility="Collapsed" Margin="0,10,0,0" Click="BackupDatabaseButton_Click"/>
+        <ScrollViewer x:Name="BackupPanel" Visibility="Collapsed" Height="100" HorizontalScrollBarVisibility="Disabled" Padding="10" VerticalScrollBarVisibility="Auto">
+            <TextBlock x:Name="backupBlock" TextAlignment="Center" TextWrapping="Wrap"/>
+        </ScrollViewer>
         <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,10,0,10">
             <Button Name="InstallButton" Content="Download" Height="30" Width="100" Margin="10,0,10,0" Click="InstallButton_Click"/>
             <Button Name="CancelButton" Content="Cancel" Height="30" Width="100" Margin="10,0,10,0" Click="CancelButton_Click"/>
