--- a/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
@@ -29,6 +29,7 @@
             <ComboBox Name="GenderBox" FontSize="16" Margin="0,5,5,5">
                 <ComboBoxItem Content="Male"/>
                 <ComboBoxItem Content="Female"/>
+                <ComboBoxItem Content="NonBinary"/>
             </ComboBox>
         </DockPanel>
         <DockPanel>
