Updated some files to properly display Non-Binary and Not Specified as genders in certain areas that display genders. Fixed an issue that made it so Non-Binary was never select-able as a gender when modifying or adding a participant.

--- a/ChronoKeep/IO/HtmlTemplates/Printables/ResultsPrintableAgeGroup.tt
+++ b/ChronoKeep/IO/HtmlTemplates/Printables/ResultsPrintableAgeGroup.tt
@@ -81,7 +81,7 @@
 				<# foreach ((int AgeGroupID, string gender) in distanceResults[d].Keys.OrderBy(c => c.Item2).ThenBy(i => ageGroups[i.Item1].StartAge))
 				{ #>
 					<table>
-						<tr><td colspan='9' class='table-header text-important'><#= string.Format("{0} {1} - {2}", gender.Equals("M", System.StringComparison.OrdinalIgnoreCase) ? "Male" : "Female", ageGroups[AgeGroupID].StartAge, ageGroups[AgeGroupID].EndAge) #></td></tr>
+						<tr><td colspan='9' class='table-header text-important'><#= string.Format("{0} {1} - {2}", gender.Equals("M", System.StringComparison.OrdinalIgnoreCase) ? "Male" : gender.Equals("F", System.StringComparison.OrdinalIgnoreCase) ? "Female" : gender.Equals("NB", System.StringComparison.OrdinalIgnoreCase) ? "Non-Binary" : "Not Specified", ageGroups[AgeGroupID].StartAge, ageGroups[AgeGroupID].EndAge) #></td></tr>
 						<tr>
 							<td class="text-important table-label">Place</td>
 							<td class="text-important table-label"></td>
