--- a/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
@@ -29,7 +29,8 @@
             <ComboBox Name="GenderBox" FontSize="16" Margin="0,5,5,5">
                 <ComboBoxItem Content="Male"/>
                 <ComboBoxItem Content="Female"/>
-                <ComboBoxItem Content="NonBinary"/>
+                <ComboBoxItem Content="Non-Binary"/>
+                <ComboBoxItem Content="Not Specified"/>
             </ComboBox>
         </DockPanel>
         <DockPanel>
