Adding Anonymous field to event specific to hide a runner's information when uploading to the API. Added Chip field to the output of Results so we can use that to help track participants at remote spots. Modified code so that bibs can only have one chip per event. Database version updated to accommodate bib/chip and anonymous changes. Modified code to allow us to see if a participant is set to be anonymous on the participants and timing pages. Started code to upload participants separate from results.

--- a/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
+++ b/ChronoKeep/UI/MainPages/ParticipantsPage.xaml
@@ -47,6 +47,7 @@
                     <GridViewColumn Header="Comments" DisplayMemberBinding="{Binding Comments}" />
                     <GridViewColumn Header="Other" DisplayMemberBinding="{Binding Other}" />
                     <GridViewColumn Header="Owes" DisplayMemberBinding="{Binding Owes}" />
+                    <GridViewColumn Header="Anon" DisplayMemberBinding="{Binding Anonymous}" />
                 </GridView>
             </ListView.View>
         </ListView>
