--- a/ChronoKeep/UI/Timing/TimingResultsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingResultsPage.xaml
@@ -17,6 +17,7 @@
                     <GridViewColumn Header="System Time" Width="130" DisplayMemberBinding="{Binding SysTime}" />
                     <GridViewColumn Header="Time" Width="90" DisplayMemberBinding="{Binding Time}" />
                     <GridViewColumn Header="ChipTime" Width="90" DisplayMemberBinding="{Binding ChipTime}" x:Name="ChipTimeHeader" />
+                    <GridViewColumn Header="Bib" Width="50" DisplayMemberBinding="{Binding Bib}" />
                     <GridViewColumn Header="Name" Width="130" DisplayMemberBinding="{Binding ParticipantName}" />
                     <GridViewColumn Header="Pl" Width="25" DisplayMemberBinding="{Binding PlaceStr}"/>
                     <GridViewColumn Header="G" Width="25" DisplayMemberBinding="{Binding Gender}" />
