--- a/ChronoKeep/UI/MainWindow.xaml
+++ b/ChronoKeep/UI/MainWindow.xaml
@@ -1,30 +1,154 @@
-﻿<Window x:Class="Chronokeep.UI.MainWindow"
+﻿<ui:UiWindow
+        x:Class="Chronokeep.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="Chronokeep" Height="700" Width="1300" MinHeight="600" MinWidth="800"
-        Closing="Window_Closing" Loaded="Window_Loaded">
+        Closing="Window_Closing" Loaded="Window_Loaded"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+        xmlns:local="clr-namespace:Chronokeep.UI"
+        d:DataContext="{d:DesignInstance local:MainWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="180" />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <StackPanel Name="leftSide" Grid.Column="0">
-            <Button x:Name="dashboardButton" Content="Dashboard" HorizontalAlignment="Center" Margin="0,10,0,10" Width="160" Click="DashboardButton_Click" AutomationProperties.HelpText="Display Dashboard" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="timingButton" Content="Timing" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="TimingButton_Click" AutomationProperties.HelpText="Display Timing" FontSize="16" VerticalContentAlignment="Center" Height="35" />
-            <Button Name="announcer" Content="Announcer Window" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="Announcer_Click" AutomationProperties.HelpText="Announcer Window" FontSize="16" VerticalContentAlignment="Center" Height="35" />
-            <Button x:Name="participantsButton" Content="Participants" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="ParticipantsButton_Click" AutomationProperties.HelpText="Display Participants" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="chipsButton" Content="Chips" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="ChipsButton_Click" AutomationProperties.HelpText="Display Chips" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button IsEnabled="false" x:Name="reportsButton" Content="Reports" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="ReportsButton_Click" AutomationProperties.HelpText="Display Reports" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="locationsButton" Content="Locations" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="LocationsButton_Click" AutomationProperties.HelpText="Display Locations" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="distancesButton" Content="Distances" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="DistancesButton_Click" AutomationProperties.HelpText="Display Distances" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="segmentsButton" Content="Segments" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="SegmentsButton_Click" AutomationProperties.HelpText="Display Segments" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="agegroupsButton" Content="Age Groups" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="AgegroupsButton_Click" AutomationProperties.HelpText="Display Age Groups" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="settingsButton" Content="Settings" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="SettingsButton_Click" AutomationProperties.HelpText="Display Settings" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-            <Button x:Name="aboutButton" Content="About" HorizontalAlignment="Center" Margin="0,0,0,10" Width="160" Click="AboutButton_Click" AutomationProperties.HelpText="Display Settings" FontSize="16" VerticalContentAlignment="Center" Height="35"/>
-        </StackPanel>
-        <Frame x:Name="TheFrame" Grid.Column="1" NavigationUIVisibility="Hidden" />
+        <ui:TitleBar
+            Title="Chronokeep"
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Margin="42,0,0,0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True"
+                    TooltipText="Chronokeep">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+
+        <ui:NavigationCompact
+            x:Name="RootNavigation"
+            Grid.Column="0"
+            Frame="{Binding ElementName=TheFrame, Mode=OneWay}">
+            <ui:NavigationCompact.Items>
+                <ui:NavigationItem
+                    Content="Dashboard"
+                    PageTag="dashboard"
+                    Icon="Home24"
+                    Click="DashboardButton_Click"
+                    x:Name="dashboardButton"
+                    />
+                <ui:NavigationItem
+                    Content="Timing"
+                    PageTag="timing"
+                    Icon="ClipboardClock24"
+                    Click="TimingButton_Click"
+                    x:Name="timingButton"
+                    />
+                <ui:NavigationItem
+                    Content="Announcer"
+                    PageTag="announcer"
+                    Icon="AlertUrgent24"
+                    Click="Announcer_Click"
+                    x:Name="announcerButton"
+                    />
+                <ui:NavigationItem
+                    Content="Participants"
+                    PageTag="participants"
+                    Icon="Person24"
+                    Click="ParticipantsButton_Click"
+                    x:Name="participantsButton"
+                    />
+                <ui:NavigationItem
+                    Content="Chips"
+                    PageTag="chips"
+                    Icon="DeveloperBoard24"
+                    Click="ChipsButton_Click"
+                    x:Name="chipsButton"
+                    />
+                <ui:NavigationItem
+                    Content="Locations"
+                    PageTag="locations"
+                    Icon="Map24"
+                    Click="LocationsButton_Click"
+                    x:Name="locationsButton"
+                    />
+                <ui:NavigationItem
+                    Content="Distances"
+                    PageTag="distances"
+                    Icon="Ruler24"
+                    Click="DistancesButton_Click"
+                    x:Name="distancesButton"
+                    />
+                <ui:NavigationItem
+                    Content="Segments"
+                    PageTag="segments"
+                    Icon="Organization24"
+                    Click="SegmentsButton_Click"
+                    x:Name="segmentsButton"
+                    />
+                <ui:NavigationItem
+                    Content="Age Groups"
+                    PageTag="age groups"
+                    Icon="Trophy24"
+                    Click="AgegroupsButton_Click"
+                    x:Name="agegroupsButton"
+                    />
+            </ui:NavigationCompact.Items>
+            <ui:NavigationCompact.Footer>
+                <ui:NavigationItem
+                    Content="Settings"
+                    PageTag="settings"
+                    Icon="Settings24"
+                    Click="SettingsButton_Click"
+                    x:Name="settingsButton"
+                    />
+                <ui:NavigationItem
+                    Content="About"
+                    PageTag="about"
+                    Icon="Info24"
+                    Click="AboutButton_Click"
+                    x:Name="aboutButton"
+                    />
+            </ui:NavigationCompact.Footer>
+        </ui:NavigationCompact>
+
+        <Grid Grid.Column="1">
+            <Border
+                Margin="0,46,0,0"
+                CornerRadius="8,0,0,0">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="0" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Frame x:Name="TheFrame" Grid.Row="1" />
+                    <ui:Breadcrumb
+                        Grid.Row="0"
+                        Margin="56,32"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Top"
+                        FontSize="28"
+                        Navigation="{Binding ElementName=RootNavigation, Mode=OneWay}" />
+                </Grid>
+            </Border>
+        </Grid>
     </Grid>
-</Window>
+</ui:UiWindow>
