--- a/ChronoKeep/UI/MainWindow.xaml
+++ b/ChronoKeep/UI/MainWindow.xaml
@@ -10,6 +10,8 @@
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         xmlns:local="clr-namespace:Chronokeep.UI"
         d:DataContext="{d:DesignInstance local:MainWindow, IsDesignTimeCreatable=True}"
+        d:Background="{DynamicResource ApplicationBackgroundBrush}"
+        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
         ExtendsContentIntoTitleBar="True"
         WindowBackdropType="Mica"
         WindowCornerPreference="Round"
@@ -42,113 +44,111 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-
         <ui:NavigationCompact
             x:Name="RootNavigation"
             Grid.Column="0"
             Frame="{Binding ElementName=TheFrame, Mode=OneWay}">
             <ui:NavigationCompact.Items>
                 <ui:NavigationItem
-                    Content="Dashboard"
-                    PageTag="dashboard"
-                    Icon="Home24"
-                    Click="DashboardButton_Click"
-                    x:Name="dashboardButton"
-                    />
+                            Content="Dashboard"
+                            PageTag="dashboard"
+                            Icon="Home24"
+                            Click="DashboardButton_Click"
+                            x:Name="dashboardButton"
+                            />
                 <ui:NavigationItem
-                    Content="Timing"
-                    PageTag="timing"
-                    Icon="ClipboardClock24"
-                    Click="TimingButton_Click"
-                    x:Name="timingButton"
-                    />
+                            Content="Timing"
+                            PageTag="timing"
+                            Icon="ClipboardClock24"
+                            Click="TimingButton_Click"
+                            x:Name="timingButton"
+                            />
                 <ui:NavigationItem
-                    Content="Announcer"
-                    PageTag="announcer"
-                    Icon="AlertUrgent24"
-                    Click="Announcer_Click"
-                    x:Name="announcerButton"
-                    />
+                            Content="Announcer"
+                            PageTag="announcer"
+                            Icon="AlertUrgent24"
+                            Click="Announcer_Click"
+                            x:Name="announcerButton"
+                            />
                 <ui:NavigationItem
-                    Content="Participants"
-                    PageTag="participants"
-                    Icon="Person24"
-                    Click="ParticipantsButton_Click"
-                    x:Name="participantsButton"
-                    />
+                            Content="Participants"
+                            PageTag="participants"
+                            Icon="Person24"
+                            Click="ParticipantsButton_Click"
+                            x:Name="participantsButton"
+                            />
                 <ui:NavigationItem
-                    Content="Chips"
-                    PageTag="chips"
-                    Icon="DeveloperBoard24"
-                    Click="ChipsButton_Click"
-                    x:Name="chipsButton"
-                    />
+                            Content="Chips"
+                            PageTag="chips"
+                            Icon="DeveloperBoard24"
+                            Click="ChipsButton_Click"
+                            x:Name="chipsButton"
+                            />
                 <ui:NavigationItem
-                    Content="Locations"
-                    PageTag="locations"
-                    Icon="Map24"
-                    Click="LocationsButton_Click"
-                    x:Name="locationsButton"
-                    />
+                            Content="Locations"
+                            PageTag="locations"
+                            Icon="Map24"
+                            Click="LocationsButton_Click"
+                            x:Name="locationsButton"
+                            />
                 <ui:NavigationItem
-                    Content="Distances"
-                    PageTag="distances"
-                    Icon="Ruler24"
-                    Click="DistancesButton_Click"
-                    x:Name="distancesButton"
-                    />
+                            Content="Distances"
+                            PageTag="distances"
+                            Icon="Ruler24"
+                            Click="DistancesButton_Click"
+                            x:Name="distancesButton"
+                            />
                 <ui:NavigationItem
-                    Content="Segments"
-                    PageTag="segments"
-                    Icon="Organization24"
-                    Click="SegmentsButton_Click"
-                    x:Name="segmentsButton"
-                    />
+                            Content="Segments"
+                            PageTag="segments"
+                            Icon="Organization24"
+                            Click="SegmentsButton_Click"
+                            x:Name="segmentsButton"
+                            />
                 <ui:NavigationItem
-                    Content="Age Groups"
-                    PageTag="age groups"
-                    Icon="Trophy24"
-                    Click="AgegroupsButton_Click"
-                    x:Name="agegroupsButton"
-                    />
+                            Content="Age Groups"
+                            PageTag="age groups"
+                            Icon="Trophy24"
+                            Click="AgegroupsButton_Click"
+                            x:Name="agegroupsButton"
+                            />
             </ui:NavigationCompact.Items>
             <ui:NavigationCompact.Footer>
                 <ui:NavigationItem
-                    Content="Settings"
-                    PageTag="settings"
-                    Icon="Settings24"
-                    Click="SettingsButton_Click"
-                    x:Name="settingsButton"
-                    />
+                            Content="Settings"
+                            PageTag="settings"
+                            Icon="Settings24"
+                            Click="SettingsButton_Click"
+                            x:Name="settingsButton"
+                            />
                 <ui:NavigationItem
-                    Content="About"
-                    PageTag="about"
-                    Icon="Info24"
-                    Click="AboutButton_Click"
-                    x:Name="aboutButton"
-                    />
+                            Content="About"
+                            PageTag="about"
+                            Icon="Info24"
+                            Click="AboutButton_Click"
+                            x:Name="aboutButton"
+                            />
             </ui:NavigationCompact.Footer>
         </ui:NavigationCompact>
-
         <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
             <Border
-                Margin="0,46,0,0"
+                Grid.Column="1"
+                Grid.Row="1"
+                Background="{DynamicResource ControlFillColorDefaultBrush}"
                 CornerRadius="8,0,0,0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="0" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Frame x:Name="TheFrame" Grid.Row="1" />
-                    <ui:Breadcrumb
-                        Grid.Row="0"
-                        Margin="56,32"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        FontSize="28"
-                        Navigation="{Binding ElementName=RootNavigation, Mode=OneWay}" />
-                </Grid>
+                <Frame x:Name="TheFrame" Grid.Row="1" Margin="6" />
             </Border>
+            <ui:Breadcrumb
+                    Grid.Row="0"
+                    Margin="56,5"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    FontSize="28"
+                    Navigation="{Binding ElementName=RootNavigation, Mode=OneWay}" />
         </Grid>
     </Grid>
 </ui:UiWindow>
