--- a/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
@@ -6,14 +6,7 @@
         xmlns:local="clr-namespace:Chronokeep.UI.Announcer"
         mc:Ignorable="d"
         Title="Announcer" Height="450" Width="1000" Closing="Window_Closing">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition x:Name="NoAnnouncer" Height="100" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Label Grid.Row="0" Content="No Announcer Reader Set" FontSize="54" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Visible"/>
-        <ScrollViewer Grid.Row="1">
-            <ListBox x:Name="AnnouncerBox" Visibility="Visible" />
-        </ScrollViewer>
-    </Grid>
+    <ScrollViewer Name="ScrollBox">
+        <ListBox x:Name="AnnouncerBox" PreviewMouseWheel="AnnouncerBox_PreviewMouseWheel"/>
+    </ScrollViewer>
 </Window>
