Changed how we're handling updates for timing information from a polling solution to a pushing solution to allow for the worker to tell the display thread when it should update. This fixes the issue where the announcer window wouldn't actually update because there was nothing telling it there was new information. Added a button to allow the user to remove the link from an API event. Removed some code that is no longer useful. Fixed an issue where a participant added after age groups were set up would never actually get assigned the correct age group.

--- a/ChronoKeep/UI/API/APIPage1.xaml
+++ b/ChronoKeep/UI/API/APIPage1.xaml
@@ -13,6 +13,7 @@
             <Label Content="Select API to use:" FontSize="16" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,10"/>
             <ComboBox Name="APIBox" Width="200" VerticalAlignment="Center" />
         </StackPanel>
+        <Button x:Name="unlinkButton" Content="Unlink API" Height="25" Width="100" VerticalAlignment="Bottom" Margin="0,0,0,50" Click="Unlink_Click" Visibility="Collapsed" />
         <Button Content="Next" Height="25" Width="100" VerticalAlignment="Bottom" Margin="0,0,150,10" Click="Next_Click" />
         <Button Content="Cancel" Height="25" Width="100" VerticalAlignment="Bottom" Margin="150,0,0,10" Click="Cancel_Click" />
     </Grid>
