--- a/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
@@ -1,12 +1,47 @@
-﻿<Window x:Class="Chronokeep.UI.Announcer.AnnouncerWindow"
+﻿<ui:UiWindow
+        x:Class="Chronokeep.UI.Announcer.AnnouncerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chronokeep.UI.Announcer"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Announcer" Height="450" Width="1000" Closing="Window_Closing">
-    <ScrollViewer Name="ScrollBox">
-        <ListBox x:Name="AnnouncerBox" PreviewMouseWheel="AnnouncerBox_PreviewMouseWheel"/>
-    </ScrollViewer>
-</Window>
+        Title="Announcer" Height="450" Width="1000" Closing="Window_Closing"
+        d:DataContext="{d:DesignInstance local:AnnouncerWindow, IsDesignTimeCreatable=True}"
+        d:Background="{DynamicResource ApplicationBackgroundBrush}"
+        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <ui:TitleBar
+            Grid.Row="0">
+            <ui:TitleBar.Tray>
+                <ui:NotifyIcon
+                    FocusOnLeftClick="True"
+                    MenuOnRightClick="True">
+                    <ui:NotifyIcon.Menu>
+                        <ContextMenu>
+                            <MenuItem
+                                Header="Home"
+                                Tag="tray_home" 
+                                />
+                        </ContextMenu>
+                    </ui:NotifyIcon.Menu>
+                </ui:NotifyIcon>
+            </ui:TitleBar.Tray>
+        </ui:TitleBar>
+        <ScrollViewer
+            Name="ScrollBox"
+            Grid.Row="1">
+            <ListBox x:Name="AnnouncerBox" PreviewMouseWheel="AnnouncerBox_PreviewMouseWheel"/>
+        </ScrollViewer>
+    </Grid>
+</ui:UiWindow>
